k8s-specifications/api-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-application-api
  labels:
    app: todo-application
    type: api
spec:
  selector:
    matchLabels:
      app: todo-application
      type: api
  template:
    metadata:
      labels:
        app: todo-application
        type: api
    spec:
      containers:
      - name: todo-application-api
        image: oltho/example-todo-application-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: todo-application-api
  labels:
    app: todo-application
    type: api
spec:
  selector:
    app: todo-application
    type: api
  ports:
  - port: 80
    targetPort: 8000
